activity CRUD DTOs & methods simplified & consolidated